src/tests/functionality/assignment_1_expressions/valid/03_unary_plus_minus.c
int main() {
    +5;
    -5;
    -(3 + 2);
    +(-10);
    return 0;
}