src/tests/functionality/assignment_1_expressions/invalid_syntax/02_missing_closing_parenthesis.c
int main() {
    (5 + 3;
    return 0;
}